--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
 <body>
     <h1>PARA MI MEJOR AMIGA</h1>
     <p>
-        <span class="typed-text line1">Hoy 21 de marzo dude pero flores virtuales 🌼✨</span> <br> 
-        <span class="typed-text line2">Aunque estés lejos, estas flores son para ti 💛</span>
+        <span class="typed-text line1">Hoy 22 de marzo, llego tarde 💛</span> <br> 
+        <span class="typed-text line2">Aunque estás lejos, aqui te envio 🌼✨</span>
     </p>
     <p>
-        <span class="typed-text line3">Futura arquitecta, ¡No podían faltar tus flores amarillas!</span>
+        <br><span class="typed-text line3">Te juro no se como sigues viva </span> <br>
+        <span class="typed-text line3">tanto que trasnochas 👀👀</span> <br><br><br>
+        <span class="typed-text line4"><b>TU</b> futura ARQUI, <b>¡No podían faltar tus flores amarillas! </b></span> <br>
     </p>
 
     <div class="flowers">
@@ -30,7 +32,8 @@
     </div>
     
     <p>
-        <span class="typed-text line4">Pensaba llevarte KFC pero ya fugaste 😂</span>
+        <span class="typed-text line5">Pensaba llevarte KFC pero ya fugaste</span>
+        <span class="typed-text line6">Con fe para el concierto 😂</span>
     </p>
 
     <div class="buttons">
@@ -46,8 +49,9 @@
     <script>
         function showMessage(type) {
             let message = document.getElementById("message");
-            if (type === "like") {
+            message.style.fontSize = "20px" ;           if (type === "like") {
                 message.innerHTML = "¡Gracias! 🌻✨";
+                window.location.href = "https://wa.me/924200709?text=¡Gracias!%20🌻✨";
             } else {
                 message.innerHTML = "Activa la racha 🥺";
             }
